--- a/数字信号学习/第一章信号及采样.md
+++ b/数字信号学习/第一章信号及采样.md
@@ -18,7 +18,7 @@ $$
 
 多通道信号：
 
-<img title="" src="image/多维信号.png" alt="" data-align="center" style="zoom:80%;">
+![image](image/多维信号.png)
 
 *例子表示了一个三通道的信号。*
 
