--- a/数字信号学习/第一章信号及采样.md
+++ b/数字信号学习/第一章信号及采样.md
@@ -17,8 +17,8 @@ $$
 *其中t是自变量*
 
 多通道信号：
+![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
 
-![image](image/多维信号.png)
 
 *例子表示了一个三通道的信号。*
 
