--- a/数字信号学习/第一章信号及采样.md
+++ b/数字信号学习/第一章信号及采样.md
@@ -17,6 +17,7 @@ $$
 *其中t是自变量*
 
 多通道信号：
+![Image of Yaktocat](/image/Moresigle.png)
 ![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
 
 
