--- a/数字信号学习/第一章信号及采样.md
+++ b/数字信号学习/第一章信号及采样.md
@@ -17,7 +17,7 @@ $$
 *其中t是自变量*
 
 多通道信号：
-![Image of Yaktocat](/image/Moresigle.png)
+![Image of Yaktocat]([/image/Moresigle.pn](https://github.com/HopeKKing/DSP-Learing-notes/blob/main/%E6%95%B0%E5%AD%97%E4%BF%A1%E5%8F%B7%E5%AD%A6%E4%B9%A0/image/Moresigle.png))
 ![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
 
 
