--- a/DSP_Learn/第一章信号及采样.md
+++ b/DSP_Learn/第一章信号及采样.md
@@ -17,8 +17,7 @@ $$
 *其中t是自变量*
 
 多通道信号：
-
-<img title="" src="image/多维信号.png" alt="" data-align="center" style="zoom:80%;">
+![image](image/MAoresigle.png)
 
 *例子表示了一个三通道的信号。*
 
